tests/baselines/reference/generatorTypeCheck43(strict=true).errors.txt
generatorTypeCheck43.ts(3,11): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== generatorTypeCheck43.ts (1 errors) ====
    function* g() {
        let x = {
            *[yield 0]() {
              ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
    
            }
        }
    }